chore: WSC-1407 replace File objects with InputStream